--- a/index.html
+++ b/index.html
@@ -8,19 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <!-- First main div-->
-    
-    <!-- This the second main div-->
-    <style>
-
-  </style>
-  
 </head>
 <body>
     <!-- This is my nav bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">My About Me</a>
+          <a class="navbar-brand" href="#">Portfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button> 
@@ -44,8 +37,9 @@
       </nav>
       <!-- First div-->
       <div class="container">
+        <img src="image-url.jpg" alt="Description of the image">
         <div class="box">About me</div>
-        <div class="small-box">OKokokokokokokko</div>
+        <div class="#">I am currently a student at Benson High School. I will be graduating in May 2024. I love to learning knews things but is particularly interested in learning about information technology as the future will be full of it.</div>
       </div>
     <!-- Second div-->
     <div class="c2">
@@ -58,20 +52,26 @@
         <div class="image"></div>
       </div>
       <div class="boxc2">
-        <div class="textbox">Text Box 3</div>
+        <div class="textbox">Text Box 3</div> 
         <div class="image"></div>
       </div>
     </div>
     <!--Third div-->
     <div class="c3">
       <div class="left-col">
-        <div class="input-container">
+        <div class="input-container"> 
           <div class="textB3">TextB3</div>
            <div class="image"></div>
         </div>
       </div>
       <div class="right-col"></div>
     </div>
+    <Flex mx={-2}>
+      <Box width={1/2} px={2}>
+        <Text p={1} color='background' bg='primary'>
+          Half
+        </Text>
+      </Box>
 
 
 </body>
