git@github.com:11Dah/myPage.git

--- a/tt.html
+++ b/tt.html
@@ -42,7 +42,7 @@
       <p>The country of Japan is my dream destination</p>
     </div>
   </div>
-  <!---->
+  <!--Gallery-->
   <div class="gallery">
     <div class="row">
       <div class="col-sm-4">
