https://github.com/11Dah/myPage.git

--- a/tt.html
+++ b/tt.html
@@ -17,7 +17,7 @@
     <div class="testimonial"> <!--first div materials-->
       <article>
         <h1>about me</h1>
-        <img src="../image/colbgphto.JPG"> <!-- fixed-->
+        <img src="../myPage/image/self.jpeg"> <!-- fixed-->
         <blockquote>Hello, welcome to my page.</blockquote>
         <h5>Dah</h5>
         <p>Greetings, my name is Dah Gay, and I am a current junior at Benson High School. My primary interest lies within the IT industry, and I am highly passionate about staying abreast of the latest technological advancements. I am a voracious learner who enjoys reading, and I have a deep appreciation for nature, which I find highly rejuvenating. My ultimate career objective is to work within the IT industry. To achieve this goal, I am highly dedicated to developing a comprehensive understanding of IT, and I am committed to putting in the effort and time required to attain the necessary knowledge and skills.  </p>
